--- a/res/nifskope.qrc
+++ b/res/nifskope.qrc
@@ -47,5 +47,8 @@
         <file alias="play">icon/play.png</file>
         <file alias="repeatAll">icon/repeat-all.png</file>
         <file alias="repeatSingle">icon/repeat-single.png</file>
+        <file alias="normals">icon/normals.png</file>
+        <file alias="lightHorizontal">icon/light-rot-horizontal.png</file>
+        <file alias="lightVertical">icon/light-rot-vertical.png</file>
     </qresource>
 </RCC>
