--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -387,6 +387,7 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
     <addaction name="aTextures"/>
     <addaction name="aVertexColors"/>
     <addaction name="aVisNormals"/>
+    <addaction name="aDisableShading"/>
    </widget>
    <widget class="QMenu" name="mHelp">
     <property name="title">
@@ -1575,7 +1576,18 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
      <normaloff>:/btn/normals</normaloff>:/btn/normals</iconset>
    </property>
    <property name="text">
-    <string>Normals Only</string>
+    <string>Lighting Only</string>
+   </property>
+  </action>
+  <action name="aDisableShading">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Disable Shading</string>
+   </property>
+   <property name="shortcut">
+    <string>Alt+S</string>
    </property>
   </action>
  </widget>
