--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -202,7 +202,7 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
-   <addaction name="aResetBlockDetails"/>
+   <addaction name="aHeader"/>
    <addaction name="separator"/>
    <addaction name="aToggleBlockList"/>
    <addaction name="aToggleBlockDetails"/>
@@ -346,7 +346,7 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
      </property>
      <addaction name="aCondition"/>
      <addaction name="aRCondition"/>
-     <addaction name="aResetBlockDetails"/>
+     <addaction name="aHeader"/>
     </widget>
     <widget class="QMenu" name="menuShow">
      <property name="title">
@@ -360,7 +360,7 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
     <addaction name="menuShow"/>
     <addaction name="mToolbars"/>
     <addaction name="separator"/>
-    <addaction name="aResetBlockDetails"/>
+    <addaction name="aHeader"/>
     <addaction name="separator"/>
     <addaction name="aAnimate"/>
     <addaction name="separator"/>
@@ -852,12 +852,15 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
     <string>Quit</string>
    </property>
   </action>
-  <action name="aResetBlockDetails">
+  <action name="aHeader">
    <property name="enabled">
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Reset Block Details</string>
+    <string>Header</string>
+   </property>
+   <property name="toolTip">
+    <string>Header</string>
    </property>
   </action>
   <action name="aViewTop">
