[UI] Options for toggling Cube Mapping

--- a/res/nifskope.qrc
+++ b/res/nifskope.qrc
@@ -58,5 +58,6 @@
         <file alias="redo">icon/redo.png</file>
         <file alias="sun">icon/sun.png</file>
         <file alias="cloud">icon/cloud.png</file>
+        <file alias="cubemap">icon/cubemap.png</file>
     </qresource>
 </RCC>
